# fine-tuning-skills

./: .gitignore  AGENTS.md  gemma4-e2b-vertex-job.yaml  manager.memory.md  opencode.json  status.md
.agents/workflows/: install_gcloud.md
.opencode/agents/: data-wiki.md  manager.md  operator.md  operator.memory
.opencode/plugins/: replace-system-prompt.ts
.opencode/skills/: self-improvement
account/: SKILL.md
account/scripts/: gcp_diagnose.sh  gcp_iam.sh  gcp_projects.sh
cloud-infrastructure-setup/: SKILL.md
cloud-infrastructure-setup/references/: cost-management-guide.md  documentation-links.md  gcloud-cheat-sheet.md  iam-roles-reference.md  troubleshooting.md
cloud-infrastructure-setup/scripts/: check-permissions.sh  create-budget-alert.sh  (+7 more)
cloud-job-orchestration/: README.md  SKILL.md
cloud-storage-artifacts/: SKILL.md
container-engineering/: README.md  SKILL.md
data-place/: README.md  articles.db  index.json
gemma4-e2b-finetuning/: Dockerfile  PLAN.md  export.py  inference.py  pyproject.toml  requirements.txt  tasks.py  train_hf_peft.py  train_unsloth.py
gemma4-e2b-finetuning/configs/: hf_qlora.yaml  unsloth_lora.yaml  vertex_job.yaml
gemma4-e2b-finetuning/data/: prepare_dataset.py
gemma4-e2b-finetuning/state/: status.md  vertex_job.rendered.yaml
google-cloud-account/: SKILL.md  reference.md
google-cloud-compute-ml/: SKILL.md  reference.md
logs/: first-run.md
manage-mcp/: SKILL.md
manage-skills/: Common Patterns.md  SKILL.md
ml-training-pipeline/: SKILL.md
qwen3.5-2b-finetuning/: .dockerignore  Dockerfile  PLAN.md  export.py  inference.py  pyproject.toml  tasks.py  train_hf_peft.py
qwen3.5-2b-finetuning/configs/: hf_qlora.yaml  vertex_job.yaml
qwen3.5-2b-finetuning/state/: status.md  vertex_job.rendered.yaml
scripts/: SKILL.md  aws-patterns.md  gcp_account_manager.sh  templates.md
vertex-test-deploy/: Dockerfile  makefile  train.py
(+90 files in other folders)
